--- a/notebooks/0_start_here.ipynb
+++ b/notebooks/0_start_here.ipynb
@@ -1,11 +1,33 @@
 {
+ "metadata": {
+  "kernelspec": {
+   "display_name": "snowpark_pandas",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.19"
+  }
+ },
+ "nbformat_minor": 2,
+ "nbformat": 4,
  "cells": [
   {
    "cell_type": "markdown",
    "id": "1dde02fa-0044-4b20-b7bb-10f1a5b3fabb",
    "metadata": {
     "collapsed": false,
-    "name": "cell1"
+    "name": "cell1",
+    "resultHeight": 525
    },
    "source": [
     "### Data Engineering Pipelines with pandas on Snowflake\n",
@@ -35,7 +57,8 @@
     "codeCollapsed": false,
     "collapsed": false,
     "language": "python",
-    "name": "cell2"
+    "name": "cell2",
+    "resultHeight": 0
    },
    "outputs": [],
    "source": [
@@ -74,7 +97,8 @@
     "codeCollapsed": false,
     "collapsed": false,
     "language": "python",
-    "name": "cell4"
+    "name": "cell4",
+    "resultHeight": 0
    },
    "outputs": [],
    "source": [
@@ -90,7 +114,8 @@
    "id": "0721a789-63a3-4c90-b763-50b8a1e69c92",
    "metadata": {
     "collapsed": false,
-    "name": "cell5"
+    "name": "cell5",
+    "resultHeight": 109
    },
    "source": [
     "We will start by creating a number of features based on the customer orders using the line items.\n",
@@ -122,7 +147,8 @@
     "codeCollapsed": false,
     "collapsed": false,
     "language": "python",
-    "name": "cell7"
+    "name": "cell7",
+    "resultHeight": 235
    },
    "outputs": [],
    "source": [
@@ -137,7 +163,8 @@
     "codeCollapsed": false,
     "collapsed": false,
     "language": "python",
-    "name": "cell8"
+    "name": "cell8",
+    "resultHeight": 329
    },
    "outputs": [],
    "source": [
@@ -153,7 +180,8 @@
     "codeCollapsed": false,
     "collapsed": false,
     "language": "python",
-    "name": "cell9"
+    "name": "cell9",
+    "resultHeight": 38
    },
    "outputs": [],
    "source": [
@@ -165,7 +193,8 @@
    "id": "e53fea0b-2f36-4662-a382-98938a74f2c2",
    "metadata": {
     "collapsed": false,
-    "name": "cell10"
+    "name": "cell10",
+    "resultHeight": 103
    },
    "source": [
     "## Data Cleaning - Filtering and Aggregation\n",
@@ -181,7 +210,8 @@
     "codeCollapsed": false,
     "collapsed": false,
     "language": "python",
-    "name": "cell11"
+    "name": "cell11",
+    "resultHeight": 127
    },
    "outputs": [],
    "source": [
@@ -193,7 +223,8 @@
    "id": "122cb06a-3a08-4d32-8864-4c8ff8c046b4",
    "metadata": {
     "collapsed": false,
-    "name": "cell12"
+    "name": "cell12",
+    "resultHeight": 41
    },
    "source": [
     "Add a filter to the dataframe"
@@ -207,7 +238,8 @@
     "codeCollapsed": false,
     "collapsed": false,
     "language": "python",
-    "name": "cell13"
+    "name": "cell13",
+    "resultHeight": 296
    },
    "outputs": [],
    "source": [
@@ -222,7 +254,8 @@
    "id": "1f802173-162f-4dff-8567-ade65b9f57f1",
    "metadata": {
     "collapsed": false,
-    "name": "cell14"
+    "name": "cell14",
+    "resultHeight": 69
    },
    "source": [
     "To track the actual discount a customer gets per order, we need to calculate that in a new column by taking the product of the amount of discount (`L_DISCOUNT`), numbers sold (`L_QUANTITY`), and the price of item (`L_EXTENDEDPRICE`)."
@@ -236,7 +269,8 @@
     "codeCollapsed": false,
     "collapsed": false,
     "language": "python",
-    "name": "cell15"
+    "name": "cell15",
+    "resultHeight": 235
    },
    "outputs": [],
    "source": [
@@ -249,11 +283,10 @@
    "id": "6ec9d862-e957-42b9-9d86-03f2ad3501f7",
    "metadata": {
     "collapsed": false,
-    "name": "cell16"
+    "name": "cell16",
+    "resultHeight": 88
    },
-   "source": [
-    "Now we want to compute the aggregate of items and discount amount, grouped by order key and return flag.\n"
-   ]
+   "source": "### Aggregation\nNow we want to compute the aggregate of items and discount amount, grouped by order key and return flag.\n"
   },
   {
    "cell_type": "code",
@@ -263,7 +296,8 @@
     "codeCollapsed": false,
     "collapsed": false,
     "language": "python",
-    "name": "cell17"
+    "name": "cell17",
+    "resultHeight": 235
    },
    "outputs": [],
    "source": [
@@ -286,13 +320,26 @@
    "id": "1657bbc7-caf2-461c-9302-6f8d2187e0af",
    "metadata": {
     "collapsed": false,
-    "name": "cell22"
+    "name": "cell22",
+    "resultHeight": 103
    },
    "source": [
     "## Combine lineitem with orders information\n",
     "\n",
     "Load `ORDERS` table and join with dataframe with transformed lineitem information."
    ]
+  },
+  {
+   "cell_type": "code",
+   "id": "c2e171fb-c6ef-4a2d-bdca-69c1e5e8857d",
+   "metadata": {
+    "language": "python",
+    "name": "cell18",
+    "resultHeight": 262
+   },
+   "outputs": [],
+   "source": "print({SOURCE_DATA_PATH}) # JDB",
+   "execution_count": null
   },
   {
    "cell_type": "code",
@@ -318,7 +365,8 @@
    "id": "97d52cd4-a71b-4c72-9137-accdf54b571b",
    "metadata": {
     "collapsed": false,
-    "name": "cell24"
+    "name": "cell24",
+    "resultHeight": 41
    },
    "source": [
     "Use **merge** to join the two dataframes"
@@ -348,7 +396,8 @@
    "id": "3adc0331-1879-452f-9cc6-dd69f6824974",
    "metadata": {
     "collapsed": false,
-    "name": "cell26"
+    "name": "cell26",
+    "resultHeight": 42
    },
    "source": [
     "Drop the `L_ORDERKEY`column, it has the same values as `O_ORDERKEY`"
@@ -376,7 +425,8 @@
    "id": "a8b050f9-77a9-460a-853b-888963e6a214",
    "metadata": {
     "collapsed": false,
-    "name": "cell28"
+    "name": "cell28",
+    "resultHeight": 42
    },
    "source": [
     "More aggregations grouped by customer (`O_CUSTKEY`)"
@@ -902,26 +952,5 @@
     "SHOW TABLES LIKE 'CUSTOMER_PROFILE_%' IN {{SAVE_DATA_PATH}};"
    ]
   }
- ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "snowpark_pandas",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.9.19"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 2
+ ]
 }
